--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,200 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Will You Be My Valentine? 💖</title>
+  <style>
+    :root{
+      --bg1:#ffdde1;
+      --bg2:#ee9ca7;
+      --card:#ffffffcc;
+      --text:#1f2937;
+      --yes:#22c55e;
+      --no:#ef4444;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background: radial-gradient(circle at top, var(--bg1), var(--bg2));
+      overflow:hidden;
+      padding:20px;
+    }
+    .card{
+      width:min(520px, 92vw);
+      background:var(--card);
+      backdrop-filter: blur(10px);
+      border:1px solid rgba(255,255,255,.4);
+      border-radius:22px;
+      box-shadow: 0 20px 60px rgba(0,0,0,.15);
+      padding:26px 22px;
+      text-align:center;
+      position:relative;
+    }
+    h1{
+      margin:0 0 8px;
+      font-size: clamp(24px, 4vw, 34px);
+      line-height:1.15;
+    }
+    p{
+      margin:0 0 16px;
+      font-size:16px;
+      opacity:.9;
+    }
+    .stage{
+      position:relative;
+      height:260px;
+      border-radius:18px;
+      background: linear-gradient(180deg, rgba(255,255,255,.55), rgba(255,255,255,.2));
+      border:1px dashed rgba(0,0,0,.08);
+      overflow:hidden;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .buttons{
+      position:absolute;
+      inset:0;
+    }
+    button{
+      border:none;
+      padding:14px 18px;
+      border-radius:16px;
+      font-size:18px;
+      font-weight:700;
+      cursor:pointer;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      box-shadow: 0 10px 25px rgba(0,0,0,.18);
+      transition: transform .12s ease;
+      position:absolute;
+    }
+    button:active{ transform: scale(.96); }
+    #yesBtn{
+      background:var(--yes);
+      color:white;
+      left:50%;
+      top:60%;
+      transform: translate(-50%, -50%);
+    }
+    #noBtn{
+      background:var(--no);
+      color:white;
+      left:50%;
+      top:78%;
+      transform: translate(-50%, -50%);
+    }
 
+    .result{
+      margin-top:16px;
+      font-size:18px;
+      font-weight:700;
+      display:none;
+    }
+
+    /* floating hearts */
+    .heart{
+      position:absolute;
+      font-size:18px;
+      opacity:.75;
+      animation: floatUp 4s linear forwards;
+      pointer-events:none;
+    }
+    @keyframes floatUp{
+      from{ transform: translateY(20px); opacity:.9; }
+      to{ transform: translateY(-320px); opacity:0; }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Will you be my Valentine? 💘</h1>
+    <p>Choose wisely… 😌</p>
+
+    <div class="stage" id="stage">
+      <div class="buttons">
+        <button id="yesBtn">Yes 💖</button>
+        <button id="noBtn">No 😅</button>
+      </div>
+    </div>
+
+    <div class="result" id="result">
+      I know you gonna say it yes. No need to for any tricks . 🥰🥰🫶🫶
+    </div>
+  </div>
+
+  <script>
+    const stage  = document.getElementById("stage");
+    const noBtn  = document.getElementById("noBtn");
+    const yesBtn = document.getElementById("yesBtn");
+    const result = document.getElementById("result");
+
+    // Place "No" somewhere random inside the stage (safe margins)
+    function moveNoButton() {
+      const s = stage.getBoundingClientRect();
+      const b = noBtn.getBoundingClientRect();
+
+      const pad = 12; // keep away from edges
+      const maxX = s.width  - b.width  - pad;
+      const maxY = s.height - b.height - pad;
+
+      const x = pad + Math.random() * Math.max(1, maxX);
+      const y = pad + Math.random() * Math.max(1, maxY);
+
+      // set absolute position inside stage
+      noBtn.style.left = x + "px";
+      noBtn.style.top  = y + "px";
+      noBtn.style.transform = "translate(0,0)";
+    }
+
+    // For desktop: run away on hover
+    noBtn.addEventListener("mouseenter", moveNoButton);
+
+    // For mobile: run away when user tries to tap/press it
+    // pointerdown triggers BEFORE click (so it escapes)
+    noBtn.addEventListener("pointerdown", (e) => {
+      e.preventDefault(); // block click
+      moveNoButton();
+    });
+
+    // If somehow clicked, still escape
+    noBtn.addEventListener("click", (e) => {
+      e.preventDefault();
+      moveNoButton();
+    });
+
+    // YES button works
+    yesBtn.addEventListener("click", () => {
+      result.style.display = "block";
+      yesBtn.disabled = true;
+      noBtn.style.display = "none";
+      popHearts();
+    });
+
+    // Cute hearts effect
+    function popHearts(){
+      const emojis = ["💖","💘","🥰","🫶","💕","💗"];
+      for(let i=0;i<18;i++){
+        const h = document.createElement("div");
+        h.className = "heart";
+        h.textContent = emojis[Math.floor(Math.random()*emojis.length)];
+        const s = stage.getBoundingClientRect();
+        h.style.left = (Math.random() * (s.width-20)) + "px";
+        h.style.top  = (s.height - 10) + "px";
+        h.style.fontSize = (16 + Math.random()*18) + "px";
+        stage.appendChild(h);
+        setTimeout(()=>h.remove(), 4200);
+      }
+    }
+
+    // Initial random offset so "No" isn't perfectly centered
+    moveNoButton();
+  </script>
+</body>
+</html>
