--- a/public/index.html
+++ b/public/index.html
@@ -1,251 +1,408 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Will You Be My Valentine? 💖</title>
-  <style>
-    :root{
-      --bg1:#ffdde1;
-      --bg2:#ee9ca7;
-      --card:#ffffffcc;
-      --text:#1f2937;
-      --yes:#22c55e;
-      --no:#ef4444;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background: radial-gradient(circle at top, var(--bg1), var(--bg2));
-      overflow:hidden;
-      padding:20px;
-    }
-    .card{
-      width:min(520px, 92vw);
-      background:var(--card);
-      backdrop-filter: blur(10px);
-      border:1px solid rgba(255,255,255,.4);
-      border-radius:22px;
-      box-shadow: 0 20px 60px rgba(0,0,0,.15);
-      padding:26px 22px;
-      text-align:center;
-      position:relative;
-    }
-    h1{
-      margin:0 0 8px;
-      font-size: clamp(24px, 4vw, 34px);
-      line-height:1.15;
-    }
-    p{
-      margin:0 0 16px;
-      font-size:16px;
-      opacity:.9;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Valentine 💖</title>
 
-    .stage{
-      position:relative;
-      height:260px;
-      border-radius:18px;
-      background: linear-gradient(180deg, rgba(255,255,255,.55), rgba(255,255,255,.2));
-      border:1px dashed rgba(0,0,0,.08);
-      overflow:hidden;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      perspective: 900px; /* helps 3D feel */
-    }
-    .buttons{
-      position:absolute;
-      inset:0;
-    }
-
-    button{
-      border:none;
-      padding:14px 18px;
-      border-radius:16px;
-      font-size:18px;
-      font-weight:700;
-      cursor:pointer;
-      user-select:none;
-      -webkit-tap-highlight-color: transparent;
-      box-shadow: 0 10px 25px rgba(0,0,0,.18);
-      position:absolute;
-
-      /* Smooth 3D movement */
-      will-change: transform;
-      transform-style: preserve-3d;
-    }
-    button:active{ transform: scale(.96); }
-
-    #yesBtn{
-      background:var(--yes);
-      color:white;
-      left:50%;
-      top:60%;
-      transform: translate(-50%, -50%);
-    }
-
-    /* We keep No anchored at center via left/top, then move using translate3d */
-    #noBtn{
-      background:var(--no);
-      color:white;
-      left:50%;
-      top:78%;
-
-      /* start centered */
-      transform: translate3d(-50%, -50%, 0) rotateX(0deg) rotateY(0deg);
-      transition:
-        transform 650ms cubic-bezier(.16,1,.3,1), /* glide */
-        filter 250ms ease,
-        box-shadow 250ms ease;
-    }
-
-    /* Extra floating feel when your cursor is near (desktop) */
-    #noBtn.floating{
-      animation: hoverFloat 1.8s ease-in-out infinite;
-    }
-    @keyframes hoverFloat{
-      0%,100% { transform: var(--t) translateZ(0px); }
-      50%     { transform: var(--t) translateZ(18px); }
-    }
-
-    .result{
-      margin-top:16px;
-      font-size:18px;
-      font-weight:700;
-      display:none;
-    }
-
-    /* floating hearts */
-    .heart{
-      position:absolute;
-      font-size:18px;
-      opacity:.75;
-      animation: floatUp 4s linear forwards;
-      pointer-events:none;
-    }
-    @keyframes floatUp{
-      from{ transform: translateY(20px); opacity:.9; }
-      to{ transform: translateY(-320px); opacity:0; }
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Will you be my Valentine? 💘</h1>
-    <p>Choose wisely… 😌</p>
-
-    <div class="stage" id="stage">
-      <div class="buttons">
-        <button id="yesBtn">Yes 💖</button>
-        <button id="noBtn">No 😅</button>
-      </div>
-    </div>
-
-    <div class="result" id="result">
-      I know you gonna say it yes. No need to for any tricks . 🥰🥰🫶🫶
-    </div>
-  </div>
-
-  <script>
-    const stage  = document.getElementById("stage");
-    const noBtn  = document.getElementById("noBtn");
-    const yesBtn = document.getElementById("yesBtn");
-    const result = document.getElementById("result");
-
-    // Keep track of current "target" translate for smoother feel
-    let tx = 0, ty = 0, rz = 0, rx = 0, ry = 0;
-
-    function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
-
-    function moveNoButtonSmooth() {
-      const s = stage.getBoundingClientRect();
-      const b = noBtn.getBoundingClientRect();
-
-      // available space inside stage (leave margins)
-      const pad = 14;
-      const maxX = (s.width  - b.width)  / 2 - pad; // since anchored at center
-      const maxY = (s.height - b.height) / 2 - pad;
-
-      // random target translate from center
-      tx = (Math.random() * 2 - 1) * Math.max(10, maxX);
-      ty = (Math.random() * 2 - 1) * Math.max(10, maxY);
-
-      // add some playful 3D tilts
-      rz = (Math.random() * 18 - 9);   // -9..9 deg
-      rx = (Math.random() * 14 - 7);   // -7..7 deg
-      ry = (Math.random() * 18 - 9);   // -9..9 deg
-
-      // Store the base transform in a CSS variable so hoverFloat can use it
-      const base = `translate3d(calc(-50% + ${tx}px), calc(-50% + ${ty}px), 0px) rotateZ(${rz}deg) rotateX(${rx}deg) rotateY(${ry}deg)`;
-      noBtn.style.setProperty("--t", base);
-      noBtn.style.transform = base;
-
-      // kick the floating animation briefly
-      noBtn.classList.add("floating");
-      clearTimeout(noBtn._floatTimer);
-      noBtn._floatTimer = setTimeout(()=> noBtn.classList.remove("floating"), 1200);
-    }
-
-    // Desktop: run away when cursor gets close (not instant)
-    noBtn.addEventListener("mouseenter", moveNoButtonSmooth);
-
-    // Mobile: if finger comes near, it glides away
-    stage.addEventListener("pointermove", (e) => {
-      // Only react if pointer is near the no button
-      const b = noBtn.getBoundingClientRect();
-      const dx = e.clientX - (b.left + b.width/2);
-      const dy = e.clientY - (b.top  + b.height/2);
-      const dist = Math.hypot(dx, dy);
-
-      // Distance threshold: adjust for "hard to catch"
-      if(dist < 90){
-        moveNoButtonSmooth();
+    <style>
+      :root {
+        --pink1: #ffd6e7;
+        --pink2: #ff9fc3;
+        --card: #ffffffde;
+        --text: #2b2b2b;
+        --yes: #22c55e;
+        --no: #ef4444;
       }
-    });
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family:
+          system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Arial,
+          sans-serif;
+        background: radial-gradient(circle at top, var(--pink1), var(--pink2));
+        overflow: hidden;
+        padding: 18px;
+        color: var(--text);
+      }
 
-    // If user tries to press No, escape
-    noBtn.addEventListener("pointerdown", (e) => {
-      e.preventDefault();
-      moveNoButtonSmooth();
-    });
+      /* floating hearts background */
+      .hearts {
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 0;
+      }
+      .heart {
+        position: absolute;
+        opacity: 0.35;
+        animation: float 10s linear infinite;
+        font-size: 18px;
+        filter: blur(0.2px);
+      }
+      @keyframes float {
+        0% {
+          transform: translateY(110vh) translateX(0) rotate(0deg);
+        }
+        100% {
+          transform: translateY(-30vh) translateX(50px) rotate(360deg);
+        }
+      }
 
-    noBtn.addEventListener("click", (e) => {
-      e.preventDefault();
-      moveNoButtonSmooth();
-    });
+      .card {
+        width: min(520px, 96vw);
+        background: var(--card);
+        border-radius: 22px;
+        box-shadow: 0 24px 70px rgba(0, 0, 0, 0.18);
+        padding: 20px 18px 18px;
+        text-align: center;
+        position: relative;
+        z-index: 2;
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.55);
+      }
+      .title {
+        font-size: 30px;
+        font-weight: 900;
+        margin: 4px 0 8px;
+        color: #ff4d8d;
+        letter-spacing: 0.3px;
+      }
+      .subtitle {
+        font-size: 18px;
+        font-weight: 700;
+        margin: 8px 0 16px;
+        opacity: 0.9;
+      }
 
-    // YES button works
-    yesBtn.addEventListener("click", () => {
-      result.style.display = "block";
-      yesBtn.disabled = true;
-      noBtn.style.display = "none";
-      popHearts();
-    });
+      .gifBox {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 8px 0 4px;
+      }
+      .gifBox img {
+        width: min(300px, 78vw);
+        height: auto;
+        border-radius: 16px;
+        box-shadow: 0 14px 40px rgba(0, 0, 0, 0.12);
+        background: #fff;
+      }
 
-    function popHearts(){
-      const emojis = ["💖","💘","🥰","🫶","💕","💗"];
-      for(let i=0;i<18;i++){
+      .question {
+        margin: 12px 0 16px;
+        font-size: 18px;
+        font-weight: 800;
+      }
+
+      /* ✅ Buttons: perfectly aligned by default */
+      .btnRow {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 12px;
+        margin-top: 6px;
+        position: relative;
+        height: 74px; /* room for escape */
+      }
+
+      .btn {
+        border: none;
+        padding: 14px 22px;
+        font-size: 18px;
+        font-weight: 900;
+        border-radius: 999px;
+        cursor: pointer;
+        color: white;
+        box-shadow: 0 14px 30px rgba(0, 0, 0, 0.14);
+        transition:
+          transform 650ms cubic-bezier(0.16, 1, 0.3, 1),
+          filter 0.2s ease;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
+        min-width: 120px;
+        will-change: transform;
+      }
+      .btn:active {
+        transform: scale(0.96);
+      }
+
+      #yesBtn {
+        background: var(--yes);
+        transform: scale(1);
+      }
+
+      #noBtn {
+        background: var(--no);
+        position: relative; /* ✅ starts as flex item */
+        transform: translate(0, 0) scale(1);
+      }
+
+      /* only when escaping */
+      #noBtn.fleeing {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+      }
+
+      .hint {
+        margin-top: 10px;
+        font-size: 12px;
+        opacity: 0.65;
+      }
+
+      /* Final screen sparkle burst */
+      .burst {
+        position: absolute;
+        inset: 0;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 3;
+        display: none;
+      }
+      .spark {
+        position: absolute;
+        font-size: 18px;
+        animation: burst 1.3s ease-out forwards;
+        opacity: 0.9;
+      }
+      @keyframes burst {
+        from {
+          transform: translate(0, 0) scale(0.9);
+          opacity: 1;
+        }
+        to {
+          transform: translate(var(--dx), var(--dy)) scale(1.2);
+          opacity: 0;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="hearts" id="hearts"></div>
+
+    <div class="card">
+      <div class="burst" id="burst"></div>
+
+      <div class="title" id="title">Hey Cutie!</div>
+
+      <div class="gifBox">
+        <img id="mainGif" src="gifs/giving-flower.gif" alt="Valentine gif" />
+      </div>
+
+      <div class="subtitle" id="subtitle">
+        Hi cutie, <span id="name">HerName</span> 💗
+      </div>
+      <div class="question" id="question">Will you be my Valentine?</div>
+
+      <div class="btnRow" id="btnRow">
+        <button class="btn" id="yesBtn">Yes</button>
+        <button class="btn" id="noBtn">No</button>
+      </div>
+
+      <div class="hint" id="hint">(*No button is shy 😅*)</div>
+    </div>
+
+    <audio id="bgMusic" loop>
+      <source src="music/im-not-cute-anymore.mp3" type="audio/mp3" />
+    </audio>
+
+    <script>
+      // ====== CONFIG ======
+      const HER_NAME = "Jona"; // change name here
+
+      const music = document.getElementById("bgMusic");
+      let musicStarted = false;
+
+      const GIFS = {
+        flowers: "gifs/giving-flower.gif",
+        cry: "gifs/crying-biting.gif",
+        beg: "gifs/crying.gif",
+        table: "gifs/crying-and-smashing.gif",
+        kiss: "gifs/kissing.gif",
+      };
+
+      // ====== ELEMENTS ======
+      const nameEl = document.getElementById("name");
+      const mainGif = document.getElementById("mainGif");
+      const titleEl = document.getElementById("title");
+      const subtitleEl = document.getElementById("subtitle");
+      const questionEl = document.getElementById("question");
+      const hintEl = document.getElementById("hint");
+
+      const stage = document.getElementById("btnRow");
+      const noBtn = document.getElementById("noBtn");
+      const yesBtn = document.getElementById("yesBtn");
+      const burst = document.getElementById("burst");
+
+      nameEl.textContent = HER_NAME;
+
+      function startMusic() {
+        if (!musicStarted) {
+          music.volume = 0.5; // not annoying
+          music.play().catch(() => {});
+          musicStarted = true;
+        }
+      }
+
+      // Start music on first user interaction
+      document.addEventListener("pointerdown", startMusic, { once: true });
+      document.addEventListener("keydown", startMusic, { once: true });
+
+      // ====== hearts background ======
+      const heartsWrap = document.getElementById("hearts");
+      const heartEmojis = ["💗", "💖", "💕", "💘", "❤️", "💞"];
+      function spawnHeart() {
         const h = document.createElement("div");
         h.className = "heart";
-        h.textContent = emojis[Math.floor(Math.random()*emojis.length)];
-        const s = stage.getBoundingClientRect();
-        h.style.left = (Math.random() * (s.width-20)) + "px";
-        h.style.top  = (s.height - 10) + "px";
-        h.style.fontSize = (16 + Math.random()*18) + "px";
-        stage.appendChild(h);
-        setTimeout(()=>h.remove(), 4200);
+        h.textContent =
+          heartEmojis[Math.floor(Math.random() * heartEmojis.length)];
+        h.style.left = Math.random() * 100 + "vw";
+        h.style.fontSize = 14 + Math.random() * 24 + "px";
+        h.style.animationDuration = 7 + Math.random() * 8 + "s";
+        h.style.opacity = (0.18 + Math.random() * 0.35).toFixed(2);
+        heartsWrap.appendChild(h);
+        setTimeout(() => h.remove(), 16000);
       }
-    }
+      setInterval(spawnHeart, 220);
+      for (let i = 0; i < 18; i++) spawnHeart();
 
-    // Start with a gentle move so it already feels alive
-    moveNoButtonSmooth();
-  </script>
-</body>
+      // ====== NO logic ======
+      let noAttempts = 0;
+
+      function setMoodByAttempts() {
+        if (noAttempts === 0) {
+          mainGif.src = GIFS.flowers;
+          titleEl.textContent = "Hey Cutie!";
+          subtitleEl.innerHTML = `Hi cutie, <span>${HER_NAME}</span> 💗`;
+          questionEl.textContent = "Will you be my Valentine?";
+          hintEl.textContent = "(*No button is shy 😅*)";
+        } else if (noAttempts === 1) {
+          mainGif.src = GIFS.cry;
+          questionEl.textContent = "Aww… why no? 🥺";
+          hintEl.textContent = "Try again… 😭";
+        } else if (noAttempts === 2) {
+          mainGif.src = GIFS.beg;
+          questionEl.textContent = "Pleaseeee… 🫶";
+          hintEl.textContent = "Don’t do this to me 😩";
+        } else if (noAttempts === 3) {
+          mainGif.src = GIFS.table;
+          questionEl.textContent = "WHY!!!! 😭😭😭";
+          hintEl.textContent = "Okay okay…";
+        } else if (noAttempts === 4) {
+          mainGif.src = GIFS.beg;
+          questionEl.textContent = "Begging please… 🥺";
+          hintEl.textContent = "One more no and you’re trapped 😈";
+        } else {
+          mainGif.src = GIFS.beg;
+          questionEl.textContent = "You have no choice now 😈";
+          hintEl.textContent = "Just press YES 💖";
+        }
+      }
+
+      function updateButtonSizes() {
+        // YES grows with every "No"
+        const yesScale = 1 + Math.min(noAttempts, 7) * 0.12;
+        yesBtn.style.transform = `scale(${yesScale})`;
+
+        // After 5 attempts, NO becomes big too
+        if (noAttempts >= 5) {
+          noBtn.style.transform = "translate(0,0) scale(1.25)";
+        }
+      }
+
+      function escapeNoButton() {
+        // Switch to absolute only when escaping
+        noBtn.classList.add("fleeing");
+
+        const s = stage.getBoundingClientRect();
+        const b = noBtn.getBoundingClientRect();
+
+        const pad = 8;
+        const maxX = s.width - b.width - pad;
+        const maxY = s.height - b.height - pad;
+
+        const x = pad + Math.random() * Math.max(1, maxX);
+        const y = pad + Math.random() * Math.max(1, maxY);
+
+        const offsetX = x - s.width / 2 + b.width / 2;
+        const offsetY = y - s.height / 2 + b.height / 2;
+
+        const rot = (Math.random() * 14 - 7).toFixed(1);
+        const scale = noAttempts >= 5 ? 1.25 : 1;
+
+        noBtn.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${scale}) rotate(${rot}deg)`;
+      }
+
+      function handleNoAttempt(e) {
+        e.preventDefault();
+        noAttempts++;
+        setMoodByAttempts();
+        updateButtonSizes();
+        escapeNoButton();
+      }
+
+      // Escape ONLY when trying to click/tap/hover NO
+      noBtn.addEventListener("pointerdown", handleNoAttempt);
+      noBtn.addEventListener("click", handleNoAttempt);
+      noBtn.addEventListener("mouseenter", () => {
+        noAttempts++;
+        setMoodByAttempts();
+        updateButtonSizes();
+        escapeNoButton();
+      });
+
+      // ====== YES final screen ======
+      function makeBurst() {
+        burst.innerHTML = "";
+        burst.style.display = "block";
+        const items = ["✨", "💖", "💘", "🫶", "🌟", "💞", "🎉", "🥰"];
+        const box = burst.getBoundingClientRect();
+        for (let i = 0; i < 38; i++) {
+          const s = document.createElement("div");
+          s.className = "spark";
+          s.textContent = items[Math.floor(Math.random() * items.length)];
+          s.style.left = box.width / 2 + "px";
+          s.style.top = box.height / 2 + "px";
+          s.style.setProperty("--dx", Math.random() * 420 - 210 + "px");
+          s.style.setProperty("--dy", Math.random() * 360 - 180 + "px");
+          s.style.fontSize = 16 + Math.random() * 20 + "px";
+          burst.appendChild(s);
+        }
+        setTimeout(() => (burst.style.display = "none"), 1400);
+      }
+
+      yesBtn.addEventListener("click", () => {
+        titleEl.textContent = "Yay! Happy Valentine’s Day! 💝";
+        subtitleEl.textContent = "";
+        questionEl.textContent = "I love you so much! 💗✨";
+        hintEl.textContent = "";
+
+        mainGif.src = GIFS.kiss;
+
+        yesBtn.style.display = "none";
+        noBtn.style.display = "none";
+
+        makeBurst();
+      });
+
+      // Init
+      mainGif.src = GIFS.flowers;
+      setMoodByAttempts();
+      updateButtonSizes();
+    </script>
+  </body>
 </html>
