Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@
         if (noAttempts === 0) {
           mainGif.src = GIFS.flowers;
           titleEl.textContent = "Hey Cutie!";
-          subtitleEl.innerHTML = `Hi cutie, <span>${HER_NAME}</span> 💗`;
+          //subtitleEl.innerHTML = `Hi cutie, <span>${HER_NAME}</span> 💗`;
           questionEl.textContent = "Will you be my Valentine?";
           hintEl.textContent = "(*No button is shy 😅*)";
         } else if (noAttempts === 1) {
@@ -406,3 +406,4 @@
     </script>
   </body>
 </html>
+
