Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
 
     <script>
       // ====== CONFIG ======
-      const HER_NAME = "Jona"; // change name here
+      const HER_NAME = ""; // change name here
 
       const music = document.getElementById("bgMusic");
       let musicStarted = false;
@@ -406,4 +406,5 @@
     </script>
   </body>
 </html>
+
 
