Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -269,9 +269,9 @@
       function setMoodByAttempts() {
         if (noAttempts === 0) {
           mainGif.src = GIFS.flowers;
-          titleEl.textContent = "Hey Cutie!";
+          titleEl.textContent = "Hey Crush!";
           questionEl.textContent = "Will you be my Valentine?";
-          hintEl.textContent = "(*No button is shy 😅*)";
+          hintEl.textContent = "(No button is shy 😅)";
         } else if (noAttempts === 1) {
           mainGif.src = GIFS.cry;
           questionEl.textContent = "Aww… why no? 🥺";
@@ -402,3 +402,4 @@
     </script>
   </body>
 </html>
+
